# Enter-Code-Site

./: .env.example  .gitignore  NEXT_STEPS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  .zshrct.zshrc  Dockerfile  README.md  SUBSCRIPTION_API.md  __init__.py  auth_service.py  database.py  main.py  migrate_subscriptions.py  pyproject.toml  requests.py  requests_shemas.py  user_repository.py
backend/data/: javascript_demo_course.json  news_seed.json  python_demo_course.json
backend/database/: __init__.py  utils.py
backend/models/: achievement.py  attendance.py  course.py  course_request.py  event.py  group.py  news_article.py  programming_language.py  student_course_enrollment.py  task.py  topic.py  user.py
backend/routers/: achievements.py  auth.py  courses.py  events.py  groups.py  news.py  subscriptions.py  tasks.py  teaching.py  topics.py  users.py
backend/schemas/: requests.py  responses.py
backend/services/: achievement_service.py  auth_service.py  billing_service.py  code_runner_harness.py  code_runner_service.py  learning_service.py  seed_learning_content_service.py  seed_news_content_service.py  serializer_service.py  task_execution_service.py  user_service.py
backend/tests/: test_auth_api.py  test_code_runner_service.py  test_courses_api.py  test_smoke_flow_api.py  test_support.py  test_tasks_api.py  test_topics_api.py
frontend/: .dockerignore  .env  .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: App.js  App.test.js  i18n.js  index.css
frontend/src/api/: account.js  achievements.js  (+8 more)
(+39 files in other folders)
