[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Alkis",email = "32323619+Alkis12@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi[standart] (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "beanie (>=1.25.0,<2.0.0)",
    "motor (>=3.3.0,<4.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
